--- a/o-stock-microservices-app/licensing-service/src/main/resources/application.properties
+++ b/o-stock-microservices-app/licensing-service/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+# Actuator properties
+management.endpoints.web.base-path=/
+management.endpoints.enabled-by-default=false
+management.endpoint.health.show-details=always
+management.health.db.enabled=false
+management.health.diskspace.enabled=true
