--- a/o-stock-microservices-app/licensing-service/Dockerfile
+++ b/o-stock-microservices-app/licensing-service/Dockerfile
@@ -1,6 +1,6 @@
 #stage 1
 #Start with a base image containing Java runtime
-FROM openjdk:11-slim as build
+FROM openjdk:17-jdk-slim as build
 
 # Add Maintainer Info
 LABEL maintainer="Ahmed AbdELnaby <ahmed.abdelnaby.gad@gmail.com>"
@@ -16,7 +16,7 @@ RUN mkdir -p target/dependency && (cd target/dependency; jar -xf /app.jar)
 
 #stage 2
 #Same Java runtime
-FROM openjdk:11-slim
+FROM openjdk:17-jdk-slim
 
 #Add volume pointing to /tmp
 VOLUME /tmp
@@ -28,4 +28,4 @@ COPY --from=build ${DEPENDENCY}/META-INF /app/META-INF
 COPY --from=build ${DEPENDENCY}/BOOT-INF/classes /app
 
 #execute the application
-ENTRYPOINT ["java","-cp","app:app/lib/*","com.optimagrowth.license.LicenseServiceApplication"]
+ENTRYPOINT ["java","-cp","app:app/lib/*","com.optimagrowth.license.LicenceServiceApplication"]
