--- a/o-stock-microservices-app/licensing-service/Dockerfile
+++ b/o-stock-microservices-app/licensing-service/Dockerfile
@@ -1,31 +1,19 @@
 #stage 1
 #Start with a base image containing Java runtime
 FROM openjdk:17-jdk-slim as build
-
-# Add Maintainer Info
-LABEL maintainer="Ahmed AbdELnaby <ahmed.abdelnaby.gad@gmail.com>"
-
-# The application's jar file [set by dockerfile-maven-plugin in POM.xml]
-ARG JAR_FILE
-
-# Add the application's jar to the container
-COPY ${JAR_FILE} app.jar
-
-#unpackage jar file
-RUN mkdir -p target/dependency && (cd target/dependency; jar -xf /app.jar)
+ARG JAR_FILE=target/*.jar
+COPY ${JAR_FILE} application.jar
+RUN java -Djarmode=layertools -jar application.jar extract
 
 #stage 2
 #Same Java runtime
 FROM openjdk:17-jdk-slim
+WORKDIR application
 
-#Add volume pointing to /tmp
-VOLUME /tmp
-
-#Copy unpackaged application to new container
-ARG DEPENDENCY=/target/dependency
-COPY --from=build ${DEPENDENCY}/BOOT-INF/lib /app/lib
-COPY --from=build ${DEPENDENCY}/META-INF /app/META-INF
-COPY --from=build ${DEPENDENCY}/BOOT-INF/classes /app
+COPY --from=build dependencies/ ./
+COPY --from=build spring-boot-loader/ ./
+COPY --from=build snapshot-dependencies/ ./
+COPY --from=build application/ ./
 
 #execute the application
-ENTRYPOINT ["java","-cp","app:app/lib/*","com.optimagrowth.license.LicenceServiceApplication"]
+ENTRYPOINT ["java","org.springframework.boot.loader.JarLauncher"]
