--- a/o-stock-microservices-app/licensing-service/src/main/resources/application.properties
+++ b/o-stock-microservices-app/licensing-service/src/main/resources/application.properties
@@ -4,3 +4,4 @@ management.endpoints.enabled-by-default=false
 management.endpoint.health.show-details=always
 management.health.db.enabled=false
 management.health.diskspace.enabled=true
+management.endpoints.web.exposure.include=*
