--- a/o-stock-microservices-app/config-server/pom.xml
+++ b/o-stock-microservices-app/config-server/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.0.4</version>
+        <version>2.7.9</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -17,10 +17,9 @@
 
     <properties>
         <java.version>17</java.version>
-        <spring-cloud.version>2022.0.1</spring-cloud.version>
+        <spring-cloud.version>2021.0.4</spring-cloud.version>
         <docker.image.prefix>ahmedabdelnaby/ostock-</docker.image.prefix>
     </properties>
-
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -30,7 +29,6 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-config-server</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -62,11 +60,12 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <image>
-                        <name>${docker.image.prefix}${project.artifactId}:latest</name>
-                    </image>
-                </configuration>
+<!--                <configuration>-->
+<!--                    <image>-->
+<!--                        &lt;!&ndash;suppress UnresolvedMavenProperty &ndash;&gt;-->
+<!--                        <name>${docker.image.prefix}${project.artifactId}:latest</name>-->
+<!--                    </image>-->
+<!--                </configuration>-->
             </plugin>
             <!-- This plugin is used to create a docker image and publish the image to docker hub-->
             <plugin>
@@ -74,6 +73,7 @@
                 <artifactId>dockerfile-maven-plugin</artifactId>
                 <version>1.4.13</version>
                 <configuration>
+                    <!--suppress UnresolvedMavenProperty -->
                     <repository>${docker.image.prefix}${project.artifactId}</repository>
                     <tag>${project.version}</tag>
                     <buildArgs>
@@ -90,14 +90,6 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0</version>
-                <configuration>
-                    <skipTests>true</skipTests>
-                </configuration>
             </plugin>
         </plugins>
     </build>
