--- a/o-stock-microservices-app/pom.xml
+++ b/o-stock-microservices-app/pom.xml
@@ -18,12 +18,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
-    <properties>
-	 <docker.image.prefix>ostock</docker.image.prefix>
-	</properties>
-
   <modules>
     <module>config-server</module>
+    <module>eureka-server</module>
     <module>licensing-service</module>
   </modules>
   <build>
