Registering Licensing and Organization services to Eureka server

--- a/o-stock-microservices-app/licensing-service/pom.xml
+++ b/o-stock-microservices-app/licensing-service/pom.xml
@@ -41,6 +41,11 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-bootstrap</artifactId>
 		</dependency>
+		<!-- includes the Eureka libraries so that the service can register with Eureka -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
