--- a/o-stock-microservices-app/licensing-service/src/main/resources/bootstrap.yml
+++ b/o-stock-microservices-app/licensing-service/src/main/resources/bootstrap.yml
@@ -1,8 +1,8 @@
 spring:
   application:
-    name: licensing-service
+    name: licensing-service     # logical name of the service that will be registered with Eureka (application ID, and the instance ID will be randomly generated)
   profiles:
     active: dev
   cloud:
     config:
-      uri: http://localhost:8071
+      uri: http://localhost:8071        # the configuration server that will call to take its configurations
