--- a/o-stock-microservices-app/organization-service/pom.xml
+++ b/o-stock-microservices-app/organization-service/pom.xml
@@ -33,6 +33,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<!-- includes the Eureka libraries so that the service can register with Eureka -->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
