--- a/o-stock-microservices-app/config-server/src/main/resources/config/organization-service.properties
+++ b/o-stock-microservices-app/config-server/src/main/resources/config/organization-service.properties
@@ -1,20 +1,16 @@
-example.property= I AM THE DEFAULT
-
 logstash.host=3.136.161.26:5000
 logging.config=classpath:logback-delayed.xml
-
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
 spring.jpa.show-sql=true
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
-
+server.port=8081
 spring.cloud.loadbalancer.ribbon.enabled=false
-
 management.endpoints.web.exposure.include=*
 management.endpoints.enabled-by-default=true
 
@@ -26,19 +22,11 @@ eureka.client.registerWithEureka=true
 eureka.client.fetchRegistry=true
 # sets the location of the Eureka service
 eureka.client.serviceUrl.defaultZone=http://localhost:8070/eureka/
-
 security.oauth2.resource.userInfoUri=http://authenticationservice:8082/user
-security.oauth2.client.grant-type=client_credentials
-signing.key: "345345fsdfsf5345"
-
-spring.cloud.stream.bindings.inboundOrgChanges.destination=orgChangeTopic
-spring.cloud.stream.bindings.inboundOrgChanges.content-type=application/json
-spring.cloud.stream.bindings.inboundOrgChanges.group=licensingGroup
+signing.key:"345345fsdfsf5345"
+spring.cloud.stream.bindings.output.destination=orgChangeTopic
+spring.cloud.stream.bindings.output.content-type=application/json
 spring.cloud.stream.kafka.binder.zkNodes=kafka
 spring.cloud.stream.kafka.binder.brokers=kafka
-
 spring.zipkin.baseUrl:http://zipkin:9411
-spring.sleuth.sampler.percentage: 1
-
-redis.server=ostock-redis.ymengq.0001.use1.cache.amazonaws.com
-redis.port=6379
+spring.sleuth.sampler.percentage:1
